--- a/tests/integration-tests/MeshCaaSSubscribeIntegrationTests/MeshCaaSSubscribeIntegrationTests.csproj
+++ b/tests/integration-tests/MeshCaaSSubscribeIntegrationTests/MeshCaaSSubscribeIntegrationTests.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="Moq" Version="4.20.72" />
-    <PackageReference Include="MSTest" Version="3.6.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Moq" />
+    <PackageReference Include="MSTest" />
   </ItemGroup>
 
   <ItemGroup>
