--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/LookupValidation.csproj
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/LookupValidation.csproj
@@ -7,6 +7,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(IsTestProject)' == 'true'">
+  <FunctionsGenerateWorkerExtensions>false</FunctionsGenerateWorkerExtensions>
+</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Worker" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" />
