--- a/Dockerfile.dotnet.base
+++ b/Dockerfile.dotnet.base
@@ -1,4 +1,10 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS base
-COPY Directory.* /app/
+
+COPY Directory.Build.props /app/Directory.Build.props
+COPY Directory.Build.targets /app/Directory.Build.targets
+COPY Directory.Packages.props /app/Directory.Packages.props
+
 COPY ./application/CohortManager/src/Functions/Shared/ /app/Shared
+
+
 
