--- a/application/CohortManager/.env.example
+++ b/application/CohortManager/.env.example
@@ -13,6 +13,10 @@ MESHKEYPASSPHRASE="" #Passpharse for the private key for authenticating against 
 NEMS_CERT_PASSWORD="" # Password for the NEMS client certificate - change for production
 NEMS_MESH_MAILBOX_ID="" # MESH Mailbox ID for NEMS subscription delivery - will be provided by project for production
 
+# Container Base Images, These are used to define the image to be used by docker when building the function images
+DOTNET_BASE_IMAGE="dotnet-base:local"
+FUNCTION_BASE_IMAGE="function-base:local"
+
 # ManageCaasSubscription Mesh base URL
 # Unset to use the default local mesh in docker-compose (https://localhost:8700/messageexchange)
 # For WireMock runs, set to http://wiremock:8080/messageexchange
