--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -147,16 +147,19 @@ jobs:
 
       - name: Build Base Images
         working-directory: ./
+        continue-on-error: false
         run: |
-          docker build -f Dockerfile.dotnet.base -t dotnet-base .
-          docker tag dotnet-base:latest "dotnet-base:${COMMIT_HASH_TAG}"
-          docker tag dotnet-base:latest "dotnet-base:${PR_NUM_TAG}"
-          docker tag dotnet-base:latest "dotnet-base:${ENVIRONMENT_TAG}"
+          docker build -f Dockerfile.dotnet.base -t cohort-manager-dotnet-base .
+          docker tag cohort-manager-function-base:-base:latest "dotnet-base:${COMMIT_HASH_TAG}"
+          docker tag cohort-manager-function-base:-base:latest "dotnet-base:${PR_NUM_TAG}"
+          docker tag cohort-manager-function-base:-base:latest "dotnet-base:${ENVIRONMENT_TAG}"
 
-          docker build -f Dockerfile.function.base -t function-base .
-          docker tag function-base:latest "function-base:${COMMIT_HASH_TAG}"
-          docker tag function-base:latest "function-base:${PR_NUM_TAG}"
-          docker tag function-base:latest "function-base:${ENVIRONMENT_TAG}"
+          docker build -f Dockerfile.function.base -t cohort-manager-function-base .
+          docker tag cohort-manager-function-base:latest "function-base:${COMMIT_HASH_TAG}"
+          docker tag cohort-manager-function-base:latest "function-base:${PR_NUM_TAG}"
+          docker tag cohort-manager-function-base:latest "function-base:${ENVIRONMENT_TAG}"
+
+
 
 
       - name: Build and Push Image
@@ -178,8 +181,8 @@ jobs:
             exit 0
           fi
 
-          export DOTNET_BASE_IMAGE="dotnet-base:${COMMIT_HASH_TAG}"
-          export FUNCTION_BASE_IMAGE="function-base:${COMMIT_HASH_TAG}"
+          export DOTNET_BASE_IMAGE="cohort-manager-dotnet-base:latest"
+          export FUNCTION_BASE_IMAGE="cohort-manager-function-base:latest"
 
           echo DOTNET_BASE_IMAGE: ${DOTNET_BASE_IMAGE}
           echo FUNCTION_BASE_IMAGE: ${FUNCTION_BASE_IMAGE}
