--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -149,12 +149,12 @@ jobs:
         working-directory: ./
         continue-on-error: false
         run: |
-          docker build -f Dockerfile.dotnet.base -t cohort-manager-dotnet-base .
+          docker build -f Dockerfile.dotnet.base -t cohort-manager-dotnet-base:latest .
           docker tag cohort-manager-function-base:latest "dotnet-base:${COMMIT_HASH_TAG}"
           docker tag cohort-manager-function-base:latest "dotnet-base:${PR_NUM_TAG}"
           docker tag cohort-manager-function-base:latest "dotnet-base:${ENVIRONMENT_TAG}"
 
-          docker build -f Dockerfile.function.base -t cohort-manager-function-base .
+          docker build -f Dockerfile.function.base -t cohort-manager-function-base:latest .
           docker tag cohort-manager-function-base:latest "function-base:${COMMIT_HASH_TAG}"
           docker tag cohort-manager-function-base:latest "function-base:${PR_NUM_TAG}"
           docker tag cohort-manager-function-base:latest "function-base:${ENVIRONMENT_TAG}"
