changing base image build check script

--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -13,7 +13,6 @@ permissions:
   contents: read
   id-token: write
   pull-requests: write
-  packages: write
 
 jobs:
   metadata:
@@ -124,6 +123,8 @@ jobs:
     name: "Image build stage"
     needs: [metadata, commit-stage, test-stage]
     uses: ./.github/workflows/stage-3-build-images.yaml
+    permissions:
+      packages: write
     secrets:
       client_id: ${{ secrets.AZURE_CLIENT_ID }}
       tenant_id: ${{ secrets.AZURE_TENANT_ID }}
