--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -124,6 +124,9 @@ jobs:
     needs: [metadata, commit-stage, test-stage]
     uses: ./.github/workflows/stage-3-build-images.yaml
     permissions:
+      contents: read
+      id-token: write
+      pull-requests: write
       packages: write
     secrets:
       client_id: ${{ secrets.AZURE_CLIENT_ID }}
