--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -95,16 +95,19 @@ jobs:
           submodules: 'true'
       - name: log in to GHCR
         uses: docker/login-action@v3
+        continue-on-error: false
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Detect base image changes
         id: detect-base-image-changes
+        continue-on-error: false
         run: bash scripts/deployment/check-base-image-changes.sh
       - name: Build Base Images
         id: build-base-images
         working-directory: ./
+        if: ${{ steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE == 'true' }}
         continue-on-error: false
         run: |
           docker build -f Dockerfile.dotnet.base -t cohort-manager-dotnet-base:latest .
