--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -129,13 +129,15 @@ jobs:
         run: |
 
           PR_NUM_TAG=$(echo "${GITHUB_REF}" | sed 's/refs\/pull\/\([0-9]*\)\/merge/\1/')
+          IMAGE_TAG="latest"
+
           if [[ ${{steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE}} == 'true' ]]; then
-            echo "DOTNET_BASE_IMAGE=cohort-manager-dotnet-base:${PR_NUM_TAG}" >> "${GITHUB_OUTPUT}"
-            echo "FUNCTION_BASE_IMAGE=cohort-manager-function-base:${PR_NUM_TAG}" >> "${GITHUB_OUTPUT}"
-          else
-            echo "DOTNET_BASE_IMAGE=cohort-manager-dotnet-base:latest" >> "${GITHUB_OUTPUT}"
-            echo "FUNCTION_BASE_IMAGE=cohort-manager-function-base:latest" >> "${GITHUB_OUTPUT}"
+            IMAGE_TAG=PR_NUM_TAG
           fi
+          echo "Image Tag = ${IMAGE_TAG}"
+
+          echo "DOTNET_BASE_IMAGE=cohort-manager-dotnet-base:${IMAGE_TAG}" >> "${GITHUB_OUTPUT}"
+          echo "FUNCTION_BASE_IMAGE=cohort-manager-function-base:${IMAGE_TAG}" >> "${GITHUB_OUTPUT}"
 
 
 
