--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -116,14 +116,14 @@ jobs:
           PR_NUM_TAG=$(echo "${GITHUB_REF}" | sed 's/refs\/pull\/\([0-9]*\)\/merge/\1/')
 
           docker build -f Dockerfile.dotnet.base -t cohort-manager-dotnet-base:latest .
-          docker tag cohort-manager-dotnet-base:latest "cohort-manager-dotnet-base:${COMMIT_HASH_TAG}"
           docker tag cohort-manager-dotnet-base:latest "cohort-manager-dotnet-base:${PR_NUM_TAG}"
-          docker tag cohort-manager-dotnet-base:latest "cohort-manager-dotnet-base:${ENVIRONMENT_TAG}"
-
           docker build -f Dockerfile.function.base -t cohort-manager-function-base:latest .
           docker tag cohort-manager-function-base:latest "cohort-manager-function-base:${COMMIT_HASH_TAG}"
           docker tag cohort-manager-function-base:latest "cohort-manager-function-base:${PR_NUM_TAG}"
-          docker tag cohort-manager-function-base:latest "cohort-manager-function-base:${ENVIRONMENT_TAG}"
+
+          docker push ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}
+          docker push ghcr.io/nhsdigital/cohort-manager-function-base:${PR_NUM_TAG}
+
       - name: Set Image Tags
         id: set-image-tags
         run: |
