--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -239,7 +239,7 @@ jobs:
           echo "pulling image"
           docker pull "$DOTNET_BASE_IMAGE"
           echo "image pulled"
-          docker images | grep "$DOTNET_BASE_IMAGE"
+          docker images
 
 
           echo "Running DockerCompose!"
