testing with a .env file in pipeline

--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -241,6 +241,10 @@ jobs:
           echo "image pulled"
           docker images
 
+          touch .env
+          echo DOTNET_BASE_IMAGE=${DOTNET_BASE_IMAGE} >> .env
+          echo FUNCTION_BASE_IMAGE=${FUNCTION_BASE_IMAGE} >> .env
+
 
           echo "Running DockerCompose!"
           docker compose -f ${COMPOSE_FILE//,/ -f } -p ${PROJECT_NAME} --profile "*" build --no-cache --pull ${function}
